Made minor changes.
Made minor changes.

--- a/SingleViewAppSwiftTemplate/Data/Events.plist
+++ b/SingleViewAppSwiftTemplate/Data/Events.plist
@@ -240,7 +240,7 @@
 		<key>yearItOccurred</key>
 		<integer>1929</integer>
 		<key>informationLink</key>
-		<string>https://en.wikipedia.org/wiki/India–United_Kingdom_relations</string>
+		<string>https://www.gov.uk/world/india/news</string>
 	</dict>
 	<dict>
 		<key>title</key>
